--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,13 @@
     "require": {
         "yiisoft/yii2": "2.*"
     },
+
+    // package dependencies
+//    "require": {
+//        "yiisoft/yii2": "~2.0.0",
+//        "imagine/imagine": "v0.5.0"
+//    },
+
     "autoload": {
         "psr-4": {
             "stesi\\modules\\cms\\": "src/"
